# serde-net

./: .gitignore  Cargo.toml  LICENSE
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: test.rs
