[package]
name = "serde-net"
version = "0.1.0"
license = "MIT"
description = "A network serialization library"
keywords = ["network", "serde", "serialization"]
categories = ["encoding"]
edition = "2021"

[dependencies]
byteorder = { version = "1.4", default-features = false }
serde = { version = "1.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std"]

std = ["serde/std", "byteorder/std"]