[package]
name = "serde-net"
version = "0.1.0"
license = "MIT"
description = "A network serialization library"
keywords = ["network", "serde", "serialization"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.56"

[dependencies]
byteorder = "1.4"
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
